tests/baselines/reference/callOverloads2.errors.txt
tests/cases/compiler/callOverloads2.ts(1,7): error TS2300: Duplicate identifier 'Foo'.
tests/cases/compiler/callOverloads2.ts(9,10): error TS2300: Duplicate identifier 'Foo'.
tests/cases/compiler/callOverloads2.ts(11,10): error TS2389: Function implementation name must be 'Foo'.
tests/cases/compiler/callOverloads2.ts(11,10): error TS2393: Duplicate function implementation.
tests/cases/compiler/callOverloads2.ts(12,10): error TS2393: Duplicate function implementation.
tests/cases/compiler/callOverloads2.ts(14,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/callOverloads2.ts(18,10): error TS2350: Only a void function can be called with the 'new' keyword.
tests/cases/compiler/callOverloads2.ts(18,10): error TS2554: Expected 0 arguments, but got 1.


==== tests/cases/compiler/callOverloads2.ts (8 errors) ====
    class Foo { // error
          ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
        bar1() { /*WScript.Echo("bar1");*/ }
    
        constructor(x: any) {
            // WScript.Echo("Constructor function has executed");
        }
    }
    
    function Foo(); // error
             ~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    
    function F1(s:string) {return s;} // error
             ~~
!!! error TS2389: Function implementation name must be 'Foo'.
             ~~
!!! error TS2393: Duplicate function implementation.
    function F1(a:any) { return a;} // error
             ~~
!!! error TS2393: Duplicate function implementation.
    
    function Goo(s:string); // error - no implementation
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
    
    declare function Gar(s:String); // expect no error
    
    var f1 = new Foo("hey");
             ~~~~~~~~~~~~~~
!!! error TS2350: Only a void function can be called with the 'new' keyword.
             ~~~~~~~~~~~~~~
!!! error TS2554: Expected 0 arguments, but got 1.
    
    
    f1.bar1();
    Foo();
    